<resources>
    <string name="app_name">SoundCrowd</string>

    <!-- Strings related to login -->
    <string name="edittext_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>

    <string name="edittext_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>

    <string name="edittext_share">be brave and humble</string>
    <string name="button_share">Share This Text</string>
    <string name="select_audio_file_title" />
    <string name="appwidget_text">MusicTitle</string>
    <string name="add_widget">Add widget</string>


</resources>
